<?xml version="1.0"?>
<package format="2">

  <name>mrs_dummy_metapackage</name>
  <version>1.0.4</version>
  <description>The MRS Dummy metapackage</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrs_dummy_package</depend>
  <depend>mrs_dummy2_package</depend>
  <depend>mrs_dummy3_package</depend>
  <depend>mrs_dummy4_package</depend>
  <depend>mrs_dummy5_package</depend>

  <export>
    <metapackage/>
  </export>

</package>
