<?xml version="1.0"?>
<package format="2">

  <name>mrs_dummy_metapackage</name>
  <version>1.0.4</version>
  <description>The MRS Dummy metapackage</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mrs_dummy_package</exec_depend>
  <exec_depend>mrs_dummy2_package</exec_depend>
  <exec_depend>mrs_dummy3_package</exec_depend>
  <exec_depend>mrs_dummy4_package</exec_depend>
  <exec_depend>mrs_dummy5_package</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
